tests/api/reference/negative/13-read-text-missing.asm
const invalid: string = fs.read_text("missing.txt")
